<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="h4bit.h4bit.Views.CreateHabitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20"
            android:hint="@string/searchNameHint"
            android:inputType="textPersonName" />

        <DatePicker
            android:id="@+id/startDatePicker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/sundayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textOff="@string/sun"
                android:textOn="@string/sun"
                android:textSize="12sp" />

            <ToggleButton
                android:id="@+id/mondayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textOff="@string/mon"
                android:textOn="@string/mon"
                android:textSize="10sp" />

            <ToggleButton
                android:id="@+id/tuesdayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textOff="@string/tue"
                android:textOn="@string/tue" />

            <ToggleButton
                android:id="@+id/wednesdayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:text="@string/wed"
                android:textOff="@string/wed"
                android:textOn="@string/wed" />

            <ToggleButton
                android:id="@+id/thursdayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:text="@string/thu"
                android:textOff="@string/thu"
                android:textOn="@string/thu" />

            <ToggleButton
                android:id="@+id/fridaytoggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:text="@string/fri"
                android:textOff="@string/fri"
                android:textOn="@string/fri" />

            <ToggleButton
                android:id="@+id/saturdayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:text="@string/sat"
                android:textOff="@string/sat"
                android:textOn="@string/sat" />
        </LinearLayout>

        <EditText
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:ems="10"
            android:maxLength="30"
            android:hint="@string/habitComment"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/createButton" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/delete" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
