...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/habitEventName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold" />

...
                android:layout_weight="1"
                android:textAlignment="center" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:contentDescription="@string/edit_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/edit_icon" />
...
