...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/comment"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reasonText"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="text"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="84dp" />

        <Button
            android:id="@+id/saveEventButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="319dp" />
...
